update display; general bug fixes

--- a/index.css
+++ b/index.css
@@ -3,3 +3,13 @@ form {
     margin-top: 20px;
 };
 
+.buttonholder {
+    border: 5px black solid;
+    margin: 50px;
+    padding: 60px;
+}
+.clearResults {
+    border: 5px black solid;
+    margin: 50px;
+    padding: 60px;
+}
