--- a/public/index.css
+++ b/public/index.css
@@ -7,3 +7,11 @@ form {
     margin: 50px;
     padding: 60px;
 }
+form label {
+    font-weight: bolder;
+}
+
+.warning {
+    color: red;
+    padding: 10px;
+}
